chore: update breakpoints

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@ Karin utbildar och handleder i metoden CRAFT, samt i behandling baserat på KBT,
         <div class="content__main">
           <ul class="content__contact-info">
             <h3 class="content__contact-info-header">Kontakt:</h3>
-            <li class="content__contact-info-item">Romberg Psykologi</li>
-            <li class="content__contact-info-item">St Paulsgatan 33A</li>
-            <li class="content__contact-info-item">Tel: 0760 224 144</li>
+            <li class="content__contact-info-item"><a href="mailto:karin@rombergpsykologi.se">Romberg Psykologi</a></li>
+            <li class="content__contact-info-item"><span>St Paulsgatan 33A</span></li>
+            <li class="content__contact-info-item"><span>Tel: 0760 224 144</span></li>
           </ul>
         </div>
       </footer>
